src/frontend/WebParser.java
// Generated from C:/Users/MyPre/IdeaProjects/compilar/src/frontend/WebParser.g4 by ANTLR 4.13.2
package frontend;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class WebParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JINJA_COMMENT=1, JINJA_VAR_START=2, JINJA_BLOCK_START=3, HTML_COMMENT=4, 
		HTML_CONDITIONAL_COMMENT=5, XML_DECLARATION=6, CDATA=7, DOCTYPE=8, TAG_SLASH_CLOSE=9, 
		TAG_OPEN=10, TAG_CLOSE=11, TAG_SLASH=12, CSS_COMMENT=13, CSS_LBRACE=14, 
		CSS_RBRACE=15, IMPORTANT=16, STRING=17, NUMBER=18, CSS_VALUE=19, HEX_COLOR=20, 
		CSS_PSEUDO=21, CSS_CLASS_SELECTOR=22, CSS_ID_SELECTOR=23, EQ=24, NE=25, 
		LE=26, GE=27, LT=28, GT=29, EQUALS=30, COMMA=31, LPAREN=32, RPAREN=33, 
		LBRACKET=34, RBRACKET=35, COLON=36, SEMICOLON=37, PLUS=38, MINUS=39, STAR=40, 
		SLASH=41, IDENTIFIER=42, HTML_TEXT=43, WS=44, NEWLINE=45, JINJA_VAR_END=46, 
		JINJA_BLOCK_END=47, J_FOR=48, J_IN=49, J_ENDFOR=50, J_IF=51, J_ELIF=52, 
		J_ELSE=53, J_ENDIF=54, J_NOT=55, J_AND=56, J_OR=57, J_EQ=58, J_NE=59, 
		J_LE=60, J_GE=61, J_LT=62, J_GT=63, J_PIPE=64, J_DOT=65, J_PERCENT=66, 
		J_EQUALS=67, J_COMMA=68, J_LPAREN=69, J_RPAREN=70, J_LBRACKET=71, J_RBRACKET=72, 
		J_COLON=73, J_PLUS=74, J_MINUS=75, J_STAR=76, J_SLASH=77, J_STRING=78, 
		J_NUMBER=79, J_IDENTIFIER=80, J_WS=81;
	public static final int
		RULE_document = 0, RULE_content = 1, RULE_anyText = 2, RULE_doctype = 3, 
		RULE_htmlComment = 4, RULE_xmlDeclaration = 5, RULE_cdata = 6, RULE_htmlElement = 7, 
		RULE_htmlContent = 8, RULE_attribute = 9, RULE_attributeValue = 10, RULE_jinjaComment = 11, 
		RULE_jinjaVar = 12, RULE_jinjaFor = 13, RULE_forContent = 14, RULE_jinjaIf = 15, 
		RULE_jinjaElif = 16, RULE_jinjaElse = 17, RULE_ifContent = 18, RULE_jinjaExpression = 19, 
		RULE_jinjaTernary = 20, RULE_jinjaLogical = 21, RULE_jinjaComparison = 22, 
		RULE_jinjaAdditive = 23, RULE_jinjaMultiplicative = 24, RULE_jinjaUnary = 25, 
		RULE_jinjaFilter = 26, RULE_jinjaPostfix = 27, RULE_jinjaPostfixOp = 28, 
		RULE_jinjaPrimary = 29, RULE_jinjaArguments = 30, RULE_cssBlock = 31, 
		RULE_cssSelector = 32, RULE_cssSelectorPart = 33, RULE_cssDeclaration = 34, 
		RULE_cssProperty = 35, RULE_cssValueList = 36, RULE_cssValue = 37, RULE_cssComment = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "content", "anyText", "doctype", "htmlComment", "xmlDeclaration", 
			"cdata", "htmlElement", "htmlContent", "attribute", "attributeValue", 
			"jinjaComment", "jinjaVar", "jinjaFor", "forContent", "jinjaIf", "jinjaElif", 
			"jinjaElse", "ifContent", "jinjaExpression", "jinjaTernary", "jinjaLogical", 
			"jinjaComparison", "jinjaAdditive", "jinjaMultiplicative", "jinjaUnary", 
			"jinjaFilter", "jinjaPostfix", "jinjaPostfixOp", "jinjaPrimary", "jinjaArguments", 
			"cssBlock", "cssSelector", "cssSelectorPart", "cssDeclaration", "cssProperty", 
			"cssValueList", "cssValue", "cssComment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'{{'", "'{%'", null, null, null, null, null, "'/>'", null, 
			null, null, null, "'{'", "'}'", "'!important'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "';'", null, null, null, null, null, null, null, 
			null, "'}}'", "'%}'", "'for'", "'in'", "'endfor'", "'if'", "'elif'", 
			"'else'", "'endif'", "'not'", "'and'", "'or'", null, null, null, null, 
			null, null, "'|'", "'.'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "JINJA_COMMENT", "JINJA_VAR_START", "JINJA_BLOCK_START", "HTML_COMMENT", 
			"HTML_CONDITIONAL_COMMENT", "XML_DECLARATION", "CDATA", "DOCTYPE", "TAG_SLASH_CLOSE", 
			"TAG_OPEN", "TAG_CLOSE", "TAG_SLASH", "CSS_COMMENT", "CSS_LBRACE", "CSS_RBRACE", 
			"IMPORTANT", "STRING", "NUMBER", "CSS_VALUE", "HEX_COLOR", "CSS_PSEUDO", 
			"CSS_CLASS_SELECTOR", "CSS_ID_SELECTOR", "EQ", "NE", "LE", "GE", "LT", 
			"GT", "EQUALS", "COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"COLON", "SEMICOLON", "PLUS", "MINUS", "STAR", "SLASH", "IDENTIFIER", 
			"HTML_TEXT", "WS", "NEWLINE", "JINJA_VAR_END", "JINJA_BLOCK_END", "J_FOR", 
			"J_IN", "J_ENDFOR", "J_IF", "J_ELIF", "J_ELSE", "J_ENDIF", "J_NOT", "J_AND", 
			"J_OR", "J_EQ", "J_NE", "J_LE", "J_GE", "J_LT", "J_GT", "J_PIPE", "J_DOT", 
			"J_PERCENT", "J_EQUALS", "J_COMMA", "J_LPAREN", "J_RPAREN", "J_LBRACKET", 
			"J_RBRACKET", "J_COLON", "J_PLUS", "J_MINUS", "J_STAR", "J_SLASH", "J_STRING", 
			"J_NUMBER", "J_IDENTIFIER", "J_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WebParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WebParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(WebParser.EOF, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17591127387646L) != 0)) {
				{
				{
				setState(78);
				content();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
	 
		public ContentContext() { }
		public void copyFrom(ContentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlCommentContentContext extends ContentContext {
		public HtmlCommentContext htmlComment() {
			return getRuleContext(HtmlCommentContext.class,0);
		}
		public HtmlCommentContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterHtmlCommentContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitHtmlCommentContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitHtmlCommentContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CdataContentContext extends ContentContext {
		public CdataContext cdata() {
			return getRuleContext(CdataContext.class,0);
		}
		public CdataContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterCdataContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitCdataContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitCdataContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssBlockContentContext extends ContentContext {
		public CssBlockContext cssBlock() {
			return getRuleContext(CssBlockContext.class,0);
		}
		public CssBlockContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterCssBlockContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitCssBlockContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitCssBlockContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlElementContentContext extends ContentContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public HtmlElementContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterHtmlElementContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitHtmlElementContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitHtmlElementContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AnyTextContentContext extends ContentContext {
		public AnyTextContext anyText() {
			return getRuleContext(AnyTextContext.class,0);
		}
		public AnyTextContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterAnyTextContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitAnyTextContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitAnyTextContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaCommentContentContext extends ContentContext {
		public JinjaCommentContext jinjaComment() {
			return getRuleContext(JinjaCommentContext.class,0);
		}
		public JinjaCommentContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterJinjaCommentContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitJinjaCommentContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitJinjaCommentContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaIfContentContext extends ContentContext {
		public JinjaIfContext jinjaIf() {
			return getRuleContext(JinjaIfContext.class,0);
		}
		public JinjaIfContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterJinjaIfContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitJinjaIfContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitJinjaIfContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaForContentContext extends ContentContext {
		public JinjaForContext jinjaFor() {
			return getRuleContext(JinjaForContext.class,0);
		}
		public JinjaForContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterJinjaForContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitJinjaForContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitJinjaForContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssCommentContentContext extends ContentContext {
		public CssCommentContext cssComment() {
			return getRuleContext(CssCommentContext.class,0);
		}
		public CssCommentContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterCssCommentContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitCssCommentContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitCssCommentContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeContentContext extends ContentContext {
		public DoctypeContext doctype() {
			return getRuleContext(DoctypeContext.class,0);
		}
		public DoctypeContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterDoctypeContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitDoctypeContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitDoctypeContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class XmlDeclContentContext extends ContentContext {
		public XmlDeclarationContext xmlDeclaration() {
			return getRuleContext(XmlDeclarationContext.class,0);
		}
		public XmlDeclContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterXmlDeclContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitXmlDeclContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitXmlDeclContent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class JinjaVarContentContext extends ContentContext {
		public JinjaVarContext jinjaVar() {
			return getRuleContext(JinjaVarContext.class,0);
		}
		public JinjaVarContentContext(ContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterJinjaVarContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitJinjaVarContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitJinjaVarContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_content);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new DoctypeContentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				doctype();
				}
				break;
			case 2:
				_localctx = new HtmlCommentContentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				htmlComment();
				}
				break;
			case 3:
				_localctx = new XmlDeclContentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				xmlDeclaration();
				}
				break;
			case 4:
				_localctx = new CdataContentContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				cdata();
				}
				break;
			case 5:
				_localctx = new JinjaCommentContentContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				jinjaComment();
				}
				break;
			case 6:
				_localctx = new JinjaForContentContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				jinjaFor();
				}
				break;
			case 7:
				_localctx = new JinjaIfContentContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				jinjaIf();
				}
				break;
			case 8:
				_localctx = new JinjaVarContentContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(93);
				jinjaVar();
				}
				break;
			case 9:
				_localctx = new HtmlElementContentContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(94);
				htmlElement();
				}
				break;
			case 10:
				_localctx = new CssBlockContentContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(95);
				cssBlock();
				}
				break;
			case 11:
				_localctx = new CssCommentContentContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(96);
				cssComment();
				}
				break;
			case 12:
				_localctx = new AnyTextContentContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(97);
				anyText();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnyTextContext extends ParserRuleContext {
		public TerminalNode HTML_TEXT() { return getToken(WebParser.HTML_TEXT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(WebParser.IDENTIFIER, 0); }
		public TerminalNode NUMBER() { return getToken(WebParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(WebParser.STRING, 0); }
		public TerminalNode COMMA() { return getToken(WebParser.COMMA, 0); }
		public TerminalNode COLON() { return getToken(WebParser.COLON, 0); }
		public TerminalNode SEMICOLON() { return getToken(WebParser.SEMICOLON, 0); }
		public TerminalNode LPAREN() { return getToken(WebParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(WebParser.RPAREN, 0); }
		public TerminalNode LBRACKET() { return getToken(WebParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(WebParser.RBRACKET, 0); }
		public TerminalNode PLUS() { return getToken(WebParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(WebParser.MINUS, 0); }
		public TerminalNode STAR() { return getToken(WebParser.STAR, 0); }
		public TerminalNode SLASH() { return getToken(WebParser.SLASH, 0); }
		public TerminalNode EQUALS() { return getToken(WebParser.EQUALS, 0); }
		public TerminalNode TAG_CLOSE() { return getToken(WebParser.TAG_CLOSE, 0); }
		public AnyTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anyText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).enterAnyText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WebParserListener ) ((WebParserListener)listener).exitAnyText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WebParserVisitor ) return ((WebParserVisitor<? extends T>)visitor).visitAnyText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnyTextContext anyText() throws RecognitionException {
		AnyTextContext _localctx = new AnyTextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_anyText);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 17591112697856L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
